--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
