--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/config-array": "^0.18.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.3.30",
     "glob": "^11.0.0",
